# vison-llm-pdf-parser

./: .gitignore  README.md  pyproject.toml
docs/: README.md  api-reference.md  architecture.md  backends.md  configuration.md  design-decisions.md  how-it-works.md
src/pdf2md/: __init__.py  _version.py  config.py  exceptions.py  models.py
src/pdf2md/convert/: converter.py  image_extractor.py  merger.py
src/pdf2md/llm/: client.py  prompts.py
src/pdf2md/pdf/: loader.py
