[project]
name = "vision-llm-pdf-parser"
version = "0.1.0"
description = "Convert PDFs to Markdown using local vision LLMs"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "openai>=1.50.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ollama = [
    "ollama>=0.4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
